--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,23 +1,23 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "123456",
+    "username": "root",
+    "password": "12345678",
     "database": "seguranca_nodejs_development",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "mysql"
   },
   "test": {
-    "username": "postgres",
-    "password": "123456",
+    "username": "mysql",
+    "password": "12345678",
     "database": "seguranca_nodejs_test",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "mysql"
   },
   "production": {
-    "username": "postgres",
-    "password": "123456",
+    "username": "root",
+    "password": "12345678",
     "database": "seguranca_nodejs_production",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "mysql"
   }
 }
